HelloUltraviolet/Fixtures/RejectedSource/Comptime/DeriveTargetProhibitedWait/Expected.uv
//! Expected diagnostic metadata for the DeriveTargetProhibitedWait rejected-source specimen.

expectedDiagnostic("E-CTE-0320", "requirement.22.DeriveTargetBodyRestrictions")
